View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0028024 | Open CASCADE | OCCT:Configuration | public | 2016-10-28 14:13 | 2022-07-05 15:55 |
Reporter | kgv | Assigned To | msv | ||
Priority | normal | Severity | minor | ||
Status | resolved | Resolution | open | ||
Target Version | 7.7.0 | ||||
Summary | 0028024: Configuration - revise XSTEPResource initialization | ||||
Description | Current initialization logic of default Data Exchange STEP/IGES parameters defined by CSF_IGESDefaults/CSF_STEPDefaults environment variables src/XSTEPResource file should be revised. src/XSTEPResource might be embedded using general resource embedding mechanism introduced within 0027258 | ||||
Steps To Reproduce | It's improvement | ||||
Tags | No tags attached. | ||||
Test case number | |||||
|
Branch CR28024 has been created by atereshi. SHA-1: 2e3382b7aa6ea4848f8f919d1751cf21c3662dae Detailed log of new commits: Author: atereshi Date: Mon May 16 16:17:12 2022 +0300 0028024: Data Exchange - create a convenient mechanism for managing shape healing options when reading STEP or IGES file Problem: During loading STEP and IGES files automatic shape healing is applied to loaded entities. Parameters of applied shape healing described in resource files: XSTEPResource/STEP and XSTEPResource/IGES. This method is very inconvenient: you can't dynamically change parameter from the program to adjust healing process for a specific file. Change: For each ShapeProcess operator described class with options (ShapeProcess_*OperatorName*Options). Default values for these options are assigned in the class constructor. Predefined values for sequences of operators of STEP or IGES loading (saving) processes are stored in ShapeProcess_PredefinedOptions class and applied in XSAlgo_AlgoContainer. A new DRAW command "param2" has been added to operationally redefine the operator option with a user value. Result: ShapeProcess and the shape healing when reading STEP or IGES, in particular, no longer depend from the resource file. The user can operationally change the operator parameter from DRAW command to adjust the shape healing process. |
|
Branch CR28024 is ready to review. |
|
src/XSAlgo/AlgoContainer.hxx src/XSAlgo/AlgoContainer.cxx src/ShapeProcess/ShapeProcess_UOperator.hxx src/ShapeProcess/ShapeProcess_UOperator.cxx src/ShapeProcess/ShapeProcess_ShapeContext.hxx src/ShapeProcess/ShapeProcess_ShapeContext.cxx src/ShapeProcess/ShapeProcess_PredefinedOptions.hxx src/ShapeProcess/ShapeProcess_PredefinedOptions.hxx src/ShapeProcess/ShapeProcess_AllOptions.hxx ------------------------------------------ to be continued ... remarks_dpasukhi_iteration_1.txt (6,217 bytes) |
|
Branch CR28024_0 has been created by atereshi. SHA-1: a3eed5dd9fe68941e276bce8eb5bd6b84b9ea824 Detailed log of new commits: Author: atereshi Date: Mon May 16 16:17:12 2022 +0300 0028024: Data Exchange - create a convenient mechanism for managing shape healing options when reading STEP or IGES file Problem: During loading STEP and IGES files automatic shape healing is applied to loaded entities. Parameters of applied shape healing described in resource files: XSTEPResource/STEP and XSTEPResource/IGES. This method is very inconvenient: you can't dynamically change parameter from the program to adjust healing process for a specific file. Change: For each ShapeProcess operator described class with options (ShapeProcess_*OperatorName*Options). Default values for these options are assigned in the class constructor. Predefined values for sequences of operators of STEP or IGES loading (saving) processes are stored in ShapeProcess_PredefinedOptions class and applied in XSAlgo_AlgoContainer. A new DRAW command "param2" has been added to operationally redefine the operator option with a user value. Result: ShapeProcess and the shape healing when reading STEP or IGES, in particular, no longer depend from the resource file. The user can operationally change the operator parameter from DRAW command to adjust the shape healing process. |
|
@dpasukhi I have corrected your remarks. Please check the branch CR28024_0. |
|
Branch CR28024_0 has been updated by atereshi. SHA-1: d1b2b830b8c619091c3fdaa8d926edfe1dc0aa11 Detailed log of new commits: Author: atereshi Date: Tue Jul 5 15:54:46 2022 +0300 //# spaces rollback |
Date Modified | Username | Field | Change |
---|---|---|---|
2016-10-28 14:13 | kgv | New Issue | |
2016-10-28 14:13 | kgv | Assigned To | => abv |
2016-10-28 14:13 | kgv | Relationship added | related to 0027258 |
2016-11-09 10:38 | abv | Target Version | 7.1.0 => 7.2.0 |
2017-07-27 11:15 | abv | Target Version | 7.2.0 => 7.4.0 |
2017-08-25 11:06 |
|
Test case number | => Not required |
2019-07-10 21:12 | abv | Target Version | 7.4.0 => 7.5.0 |
2020-09-11 15:40 | utverdov | Target Version | 7.5.0 => 7.6.0 |
2021-09-20 08:48 | kgv | Target Version | 7.6.0 => 7.7.0 |
2022-06-15 08:46 | kgv | Relationship added | has duplicate 0032963 |
2022-06-15 08:47 | kgv | Assigned To | abv => atereshi |
2022-06-15 08:47 | kgv | Status | new => assigned |
2022-06-15 08:47 | kgv | Test case number | Not required => |
2022-06-28 10:09 | git | Note Added: 0109323 | |
2022-06-28 10:38 | atereshi | Assigned To | atereshi => msv |
2022-06-28 10:38 | atereshi | Status | assigned => resolved |
2022-06-28 10:38 | atereshi | Steps to Reproduce Updated | |
2022-06-28 10:38 | atereshi | Note Added: 0109326 | |
2022-06-29 10:44 | dpasukhi | Note Added: 0109362 | |
2022-06-29 10:44 | dpasukhi | File Added: remarks_dpasukhi_iteration_1.txt | |
2022-07-04 13:25 | git | Note Added: 0109533 | |
2022-07-05 12:37 | atereshi | Note Added: 0109563 | |
2022-07-05 15:55 | git | Note Added: 0109574 |